--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 B-RepositoryLayer\A-AuthMigrations
 B-RepositoryLayer\A-Migrations
-D-PresentationLayer\appsettings.json
+D-PresentationLayer/appsettings.json
